--- a/housing_prices_predictor.ipynb
+++ b/housing_prices_predictor.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Python exercise using linear and gradient boosted regression to test precision of a dataset in predicting home prices\n",
     "# @reneeli890\n",
     "\n",
     "# inspo from @shreyas3108 https://github.com/shreyas3108"
